# mutational_signature

./: .gitignore  MANIFEST.in  README.md  combine.py  count.py  count_indels.py  count_maf.py  decompose.py  pyproject.toml  requirements.txt  setup.py  signatures30.txt
.github/workflows/: ci.yml  release.yml
data/: context_best_signature.ids.tsv  context_best_signature.sbs.tsv  signature_summary.tsv  signatures_cosmic_v3.1_id.txt  signatures_cosmic_v3.1_sbs.txt  signatures_cosmic_v3.2_id.txt  signatures_cosmic_v3.2_sbs.txt  signatures_cosmic_v3.4_dbs.hg38.txt  signatures_cosmic_v3.4_sbs.hg38.txt  signatures_cosmic_v3.4_sbs.txt  signatures_cosmic_v3_dbs.txt  signatures_cosmic_v3_id.txt  signatures_cosmic_v3_sbs_tx.txt
decompose/: combine_signatures.py  compare_signatures.py  count.py  count_indels.py  count_maf.py  decompose.py  plot.py  plot_components.py  requirements.txt  run.sh
docs/: cli.md  development.md  releasing.md
example/: README.md  mini_reference.fa  mini_sample.vcf  mini_signatures.tsv
mutational_signature/: adjust_counts.py  annotate.py  annotate_context.py  annotate_context_summary.py  annotate_maf.py  assign_signatures.py  bootstrap.py  bootstrap_simple.py  cli.py  combine_counts.py  combine_signature_stability.py  combine_signatures.py  compare_exposures.py  compare_exposures_to_signatures.py  compare_signatures.py  context_best_sig.py  context_likelihood.py  convert.py  count.py  count_contexts.py  count_indels.py  count_maf.py  count_maf_indels.py  decompose.py  decompose_bulk.py  decompose_likelihood.py  exclude_contexts.py  extended_context.py  generate.py  histograms.py  linear_dependence.py  plot_components.py  plot_counts.py  plot_signature_stability.py  plot_sigs.py  positive_by_chance.py  primary_context.py  reduce_similarity.py  refine_signatures.py  signature_stability.py  (+3 more)
mutational_signature/data/: COSMIC_v3.4_ID_GRCh37.txt  signature_summary.tsv  signatures_cosmic_v3.1_db.txt  signatures_cosmic_v3.4_dbs.hg37.txt  signatures_cosmic_v3.4_dbs.hg38.txt  signatures_cosmic_v3.4_ids.txt  signatures_cosmic_v3_sbs.txt
spec/: signature-stability.md
tests/: test_cli_smoke.py  test_combine_signature_stability.py  test_plot_signature_stability.py  test_signature_stability.py
